integrate podcast + be equal api functionally both sides part 1
